--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,30 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
+<nav class="navbar is-dark no-print" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        {{#link-to "index" class="navbar-item no-print"}}
+            XC Meet Manager
+        {{/link-to}}
+        <a role="button" {{action "toggle"}} class="navbar-burger burger {{if this.isActive "is-active"}}" aria-label="menu" aria-expanded={{this.isActive}} data-target="main-menu">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+    <div id="main-menu" class="navbar-menu {{if this.isActive "is-active"}} animated slideInDown">
+        <div class="navbar-start">
+            {{#link-to "meets" class="navbar-item no-print"}}
+                Meets
+            {{/link-to}}
+            {{#link-to "meets.import" class="navbar-item no-print"}}
+                Import a Meet
+            {{/link-to}}
+        </div>
+    </div>
+</nav>
 {{outlet}}
+<footer class="footer">
+    <div class="content has-text-centered">
+        <p>
+            <strong>XC Meet Manager</strong> by Matthew Edwards.
+        </p>
+    </div>
+</footer>
