add footer items

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,7 +24,14 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <p>
-            <strong>XC Meet Manager</strong> by Matthew Edwards.
+            <strong>XC Meet Manager</strong> by Matthew Edwards.<br>
+            Built with Ember.js and Bulma.
         </p>
+        <a href="https://bulma.io">
+            <img src="/made-with-bulma.png" alt="Made with Bulma" width="256" height="48">
+        </a>
+        <a href="https://emberjs.com">
+            <img src="/Ember-Logo.svg" alt="Ember.js logo">
+        </a>
     </div>
 </footer>
