updates to ux and database

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,7 +25,7 @@
     <div class="content has-text-centered">
         <p>
             <strong>XC Meet Manager</strong> by Matthew Edwards.<br>
-            Built with Ember.js and Bulma.
+            <i>Made with the following technologies:</i>
         </p>
         <a href="https://bulma.io">
             <img src="/made-with-bulma.png" alt="Made with Bulma" width="256" height="48">
