--- a/app/templates/meet/input/index.hbs
+++ b/app/templates/meet/input/index.hbs
@@ -4,11 +4,14 @@
     {{#link-to "meet.input.place" this.model class="button is-large is-fullwidth"}}
         Scan Bib Number Barcodes
     {{/link-to}}
-    <p>Use your phone to scan the barcodes on the runners' bibs to associate their names with the place they finished in the race</p>
+    <p>
+        Use your phone to scan the barcodes on the runners' bibs to associate their names with the place they finished
+        in the race
+    </p>
     {{#link-to "meet.input.time" this.model class="button is-large is-fullwidth"}}
         Scan Timer Paper
     {{/link-to}}
-    <p>Use your phone to scan the timer paper from your compatible Seiko timer to associate </p>
+    <p>Use your phone to scan the timer paper from your compatible Seiko timer to associate</p>
     {{#link-to "meet.input.manual" this.model class="button is-large is-fullwidth"}}
         Input Place and Time Manually
     {{/link-to}}
