--- a/app/templates/meet/input/manual.hbs
+++ b/app/templates/meet/input/manual.hbs
@@ -1,30 +1,32 @@
 <h1 class="title">Input Results Manually</h1>
 <form>
+    <div class="field">
+        <div class="control">
+            <label class="label" for="place">Place</label>
+            <Input class="input" id="place" @value={{this.place}} type="number" maxlength="4" />
+            <p class="help">The place the runner finished in the race</p>
+        </div>
+    </div>
     <label class="checkbox">
         <Input id="hide-hours" @checked={{this.hideHours}} @type="checkbox" />
         Hide Hours
     </label>
-    <div class="field">
-        <div class="control">
-            <label class="label" for="place">Place</label>
-            <Input class="input" id="place" @value={{this.place}} type="number" maxlength="4"/>
-            <p class="help">The place the runner finished in the race</p>
-        </div>
-    </div>
     <div class="field is-grouped">
         {{#unless this.hideHours}}
             <div class="control">
                 <label for="time" class="label">Hours</label>
-                <Input id="hours" class="input" @value={{this.hours}} @type="number" @min="0" @max="99"/>
+                <Input id="hours" class="input" @value={{this.hours}} @type="number" @min="0" @max="99" />
             </div>
         {{/unless}}
         <div class="control">
             <label for="minutes" class="label">Minutes</label>
-            <Input id="minutes" class="input" @value={{this.minutes}} @type="number" @min="0" @max="59" @maxlength="2"/>
+            <Input id="minutes" class="input" @value={{this.minutes}} @type="number" @min="0" @max="59"
+                @maxlength="2" />
         </div>
         <div class="control">
             <label for="seconds" class="label">Seconds</label>
-            <Input id="seconds" class="input" @value={{this.seconds}} @type="number" @min="0" @max="59" @maxlength="2"/>
+            <Input id="seconds" class="input" @value={{this.seconds}} @type="number" @min="0" @max="59"
+                @maxlength="2" />
         </div>
     </div>
     <div class="control">
@@ -37,11 +39,15 @@
         <h3 class="title">Results</h3>
     </div>
     <div class="right-level">
-        <button class="button" {{action "reverseOrder"}}>{{fa-icon (if this.isResultsReversed "sort-numeric-up" "sort-numeric-down")}}</button>
+        <button class="button" {{action "reverseOrder"}}>
+            {{fa-icon (if this.isResultsReversed "sort-numeric-up" "sort-numeric-down")}}
+        </button>
     </div>
 </nav>
 {{#unless this.results.length}}
-    <div class="notification is-warning">{{fa-icon "exclamation-triangle" classNames="is-large fa-lg"}}&nbsp;No Results</div>
+    <div class="notification is-warning">
+        {{fa-icon "exclamation-triangle" classNames="is-large fa-lg"}}&nbsp;No Results
+    </div>
 {{/unless}}
 <div class="content">
     <nav class="panel results {{if this.isResultsReversed "reversed"}}">
