--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,3 @@
-
 <section class="hero is-info is-medium is-bold">
     <div class="hero-body">
         <div class="container">
@@ -8,7 +7,7 @@
             <h2 class="subtitle">
                 Host your cross country meet with ease
             </h2>
-            {{#link-to "meets.import" class="button"}}
+            {{#link-to "import" class="button"}}
                 Host my meet!
             {{/link-to}}
         </div>
@@ -21,10 +20,16 @@
 
         <div class="content">
             <ul>
-                <li>Complete Athletic.net meet integration download entries from Athletic.net, upload the results when you are done</li>
+                <li>Complete Athletic.net meet integration download entries from Athletic.net, upload the results when
+                    you are done
+                </li>
                 <li>Quickly print entries on mailing labels directly from your browser</li>
                 <li>Scan barcodes from your phone to increase efficiency of result processing</li>
-                <li>Scan timer paper to increase efficiency of result processing <span class="tag is-warning">Work in progress</span></li>
+                <li>Scan timer paper to increase efficiency of result processing
+                    <span class="tag is-warning">
+                        Work in progress
+                    </span>
+                </li>
             </ul>
         </div>
         <h4 class="subtitle">Using XC Meet Manager</h4>
