--- a/app/templates/meet/input/division/manual.hbs
+++ b/app/templates/meet/input/division/manual.hbs
@@ -1,4 +1,4 @@
-<h1 class="title">Input Results Manually</h1>
+<h1 class="subtitle">Input Results Manually</h1>
 <form>
     <div class="field">
         <div class="control">
