--- a/app/templates/meet/input/division/place.hbs
+++ b/app/templates/meet/input/division/place.hbs
@@ -1,4 +1,4 @@
-<h1 class="title">Scan Bib Barcodes</h1>
+<h1 class="subtitle">Scan Bib Number Barcodes</h1>
 
 <Detector @type="barcode" @onDetection={{action "onDetection"}} />
 
