--- a/app/templates/components/modal.hbs
+++ b/app/templates/components/modal.hbs
@@ -1,4 +1,4 @@
-<div class="modal {{if @this.isActive "is-active" ""}}">
+<div class="modal {{if @isActive "is-active" ""}}">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
