--- a/app/templates/meet/index.hbs
+++ b/app/templates/meet/index.hbs
@@ -6,7 +6,7 @@
                 <button class="button no-print is-secondary" {{action "togglePrintPreview"}}>
                     {{if this.displayPrintPreview "View Entries" "View Print Page"}}
                 </button>
-                {{#link-to "meet.input.choose" class="button is-primary"}}
+                {{#link-to "meet.input.division.name" 1 class="button is-primary"}}
                     Input meet results
                 {{/link-to}}
             </div>
