--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,4 +1,5 @@
-@import "bulma"
+@charset "utf-8"
+@import "node_modules/bulma/bulma.sass"
 $shadow: 0px 10px 20px hsla(0%, 0%, 0%, .15), 0px 3px 6px hsla(0%, 0%, 0%, .10)
 +mobile
 .section
