--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -59,6 +59,7 @@ $shadow: 0px 10px 20px hsla(0%, 0%, 0%, .15), 0px 3px 6px hsla(0%, 0%, 0%, .10)
       padding: 0
 video
   width: 100%
+  max-height: 480px
   // height: auto
   // max-height: 320px
 
