adds the ability to download results

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -71,3 +71,8 @@ video
   z-index: 1
   & > .video-buttons
     position: relative
+
+.box.is-paddingless > pre
+  border-radius: inherit
+  //word-wrap: break-word
+  white-space: pre-wrap
