--- a/app/templates/meet/input/division/time/manual.hbs
+++ b/app/templates/meet/input/division/time/manual.hbs
@@ -1,4 +1,4 @@
-{{#link-to "meet.input.division.review" this.model}}
+{{#link-to "meet.review.division" this.model}}
     Next Review Results
 {{/link-to}}
 <TimeManual @results={{this.model.results}} @meet={{this.model.meet}} />
