add color swatch

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,5 +1,9 @@
 @charset "utf-8"
+/*! bulmaswatch v0.7.5 | MIT License */
+@import "variables"
 @import "node_modules/bulma/bulma.sass"
+@import "overrides"
+
 $shadow: 0px 10px 20px hsla(0%, 0%, 0%, .15), 0px 3px 6px hsla(0%, 0%, 0%, .10)
 +mobile
 .section
