--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,7 +22,7 @@
     </div>
 </nav>
 {{outlet}}
-<footer class="footer">
+<footer class="footer no-print">
     <div class="content has-text-centered">
         <p>
             <strong>XC Meet Manager</strong> by Matthew Edwards.<br>
