--- a/app/templates/meet/index.hbs
+++ b/app/templates/meet/index.hbs
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section no-print">
     <div class="container is-upscaled-mobile">
         <h1 class="title no-print">{{this.model.meet.name}}</h1>
         <nav class="level no-print is-mobile">
